SpecificationGrammar/SpecificationGrammarParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .SpecificationGrammarVisitor import SpecificationGrammarVisitor
else:
    from SpecificationGrammarVisitor import SpecificationGrammarVisitor



class SpecificationGrammarParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'DC['", u"'|'", u"']'", 
                     u"';'", u"'INTERFACE['", u"'CLASS['", u"':'", u"'and'", 
                     u"'or'", u"'not'", u"'true'", u"'false'", u"'<='", 
                     u"'='", u"'>='", u"'<'", u"'>'", u"'!='", u"'+'", u"'-'", 
                     u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"AND", u"OR", u"NOT", 
                      u"TRUE", u"FALSE", u"LEQ", u"EQ", u"GEQ", u"LT", u"GT", 
                      u"NEQ", u"PLUS", u"MINUS", u"TIMES", u"ID", u"INT", 
                      u"WS" ]

    RULE_spec = 0
    RULE_expr = 1
    RULE_resourceFilter = 2
    RULE_specNoDC = 3
    RULE_exprNoDC = 4
    RULE_op = 5
    RULE_arithmetic_op = 6
    RULE_bool2Op = 7
    RULE_bool1Op = 8
    RULE_boolFact = 9

    ruleNames =  [ u"spec", u"expr", u"resourceFilter", u"specNoDC", u"exprNoDC", 
                   u"op", u"arithmetic_op", u"bool2Op", u"bool1Op", u"boolFact" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    AND=10
    OR=11
    NOT=12
    TRUE=13
    FALSE=14
    LEQ=15
    EQ=16
    GEQ=17
    LT=18
    GT=19
    NEQ=20
    PLUS=21
    MINUS=22
    TIMES=23
    ID=24
    INT=25
    WS=26

    def __init__(self, input):
        super(SpecificationGrammarParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.SpecContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_spec

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.SpecContext, self).copyFrom(ctx)


    class AspecBool2OpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def spec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.SpecContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,i)

        def bool2Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool2OpContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecBool2Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecBracketsContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def spec(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecBrackets(self)
            else:
                return visitor.visitChildren(self)


    class AspecBool1OpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBool1OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def bool1Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool1OpContext,0)

        def spec(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecBool1Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecOpContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprContext,i)

        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecOp(self)
            else:
                return visitor.visitChildren(self)


    class AspecBoolFactContext(SpecContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecContext)
            super(SpecificationGrammarParser.AspecBoolFactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def boolFact(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.BoolFactContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecBoolFact(self)
            else:
                return visitor.visitChildren(self)



    def spec(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.SpecContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_spec, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            token = self._input.LA(1)
            if token in [SpecificationGrammarParser.NOT]:
                localctx = SpecificationGrammarParser.AspecBool1OpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 21
                self.bool1Op()
                self.state = 22
                self.spec(4)

            elif token in [SpecificationGrammarParser.T__0]:
                localctx = SpecificationGrammarParser.AspecBracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 24
                self.match(SpecificationGrammarParser.T__0)
                self.state = 25
                self.spec(0)
                self.state = 26
                self.match(SpecificationGrammarParser.T__1)

            elif token in [SpecificationGrammarParser.TRUE]:
                localctx = SpecificationGrammarParser.AspecBoolFactContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 28
                self.boolFact()

            elif token in [SpecificationGrammarParser.T__2, SpecificationGrammarParser.T__6, SpecificationGrammarParser.T__7, SpecificationGrammarParser.INT]:
                localctx = SpecificationGrammarParser.AspecOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 29
                self.expr(0)
                self.state = 30
                self.op()
                self.state = 31
                self.expr(0)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AspecBool2OpContext(self, SpecificationGrammarParser.SpecContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_spec)
                    self.state = 35
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 36
                    self.bool2Op()
                    self.state = 37
                    self.spec(6) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ExprContext, self).copyFrom(ctx)


    class AexprDCContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprDCContext, self).__init__(parser)
            self.copyFrom(ctx)

        def resourceFilter(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.ResourceFilterContext,0)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprDC(self)
            else:
                return visitor.visitChildren(self)


    class AexprDCNoFilterContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprDCNoFilterContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprDCNoFilter(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprNoDCContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.ExprNoDCContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprNoDC(self)
            else:
                return visitor.visitChildren(self)


    class AexprArithmeticContext(ExprContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprContext)
            super(SpecificationGrammarParser.AexprArithmeticContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprContext,i)

        def arithmetic_op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Arithmetic_opContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprArithmetic(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SpecificationGrammarParser.AexprDCContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 45
                self.match(SpecificationGrammarParser.T__2)
                self.state = 46
                self.resourceFilter(0)
                self.state = 47
                self.match(SpecificationGrammarParser.T__3)
                self.state = 48
                self.specNoDC(0)
                self.state = 49
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 2:
                localctx = SpecificationGrammarParser.AexprDCNoFilterContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.match(SpecificationGrammarParser.T__2)
                self.state = 52
                self.specNoDC(0)
                self.state = 53
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 3:
                localctx = SpecificationGrammarParser.AexprNoDCContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.exprNoDC()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AexprArithmeticContext(self, SpecificationGrammarParser.ExprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 58
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 59
                    self.arithmetic_op()
                    self.state = 60
                    self.expr(3) 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ResourceFilterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ResourceFilterContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_resourceFilter

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ResourceFilterContext, self).copyFrom(ctx)


    class AresourceFilterOpContext(ResourceFilterContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ResourceFilterContext)
            super(SpecificationGrammarParser.AresourceFilterOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SpecificationGrammarParser.ID, 0)
        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)

        def INT(self):
            return self.getToken(SpecificationGrammarParser.INT, 0)

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAresourceFilterOp(self)
            else:
                return visitor.visitChildren(self)


    class AresourceFilterBool2OpContext(ResourceFilterContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ResourceFilterContext)
            super(SpecificationGrammarParser.AresourceFilterBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def resourceFilter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ResourceFilterContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ResourceFilterContext,i)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAresourceFilterBool2Op(self)
            else:
                return visitor.visitChildren(self)



    def resourceFilter(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.ResourceFilterContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_resourceFilter, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SpecificationGrammarParser.AresourceFilterOpContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 68
            self.match(SpecificationGrammarParser.ID)
            self.state = 69
            self.op()
            self.state = 70
            self.match(SpecificationGrammarParser.INT)
            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AresourceFilterBool2OpContext(self, SpecificationGrammarParser.ResourceFilterContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_resourceFilter)
                    self.state = 72
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 73
                    self.match(SpecificationGrammarParser.T__5)
                    self.state = 74
                    self.resourceFilter(2) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class SpecNoDCContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.SpecNoDCContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_specNoDC

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.SpecNoDCContext, self).copyFrom(ctx)


    class AspecNoDCOpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCOpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exprNoDC(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.ExprNoDCContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.ExprNoDCContext,i)

        def op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.OpContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecNoDCOp(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBool2OpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBool2OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(SpecificationGrammarParser.SpecNoDCContext)
            else:
                return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,i)

        def bool2Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool2OpContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecNoDCBool2Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBool1OpContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBool1OpContext, self).__init__(parser)
            self.copyFrom(ctx)

        def bool1Op(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.Bool1OpContext,0)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecNoDCBool1Op(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBoolFactContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBoolFactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def boolFact(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.BoolFactContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecNoDCBoolFact(self)
            else:
                return visitor.visitChildren(self)


    class AspecNoDCBracketsContext(SpecNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.SpecNoDCContext)
            super(SpecificationGrammarParser.AspecNoDCBracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def specNoDC(self):
            return self.getTypedRuleContext(SpecificationGrammarParser.SpecNoDCContext,0)


        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAspecNoDCBrackets(self)
            else:
                return visitor.visitChildren(self)



    def specNoDC(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecificationGrammarParser.SpecNoDCContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_specNoDC, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            token = self._input.LA(1)
            if token in [SpecificationGrammarParser.NOT]:
                localctx = SpecificationGrammarParser.AspecNoDCBool1OpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 81
                self.bool1Op()
                self.state = 82
                self.specNoDC(4)

            elif token in [SpecificationGrammarParser.T__0]:
                localctx = SpecificationGrammarParser.AspecNoDCBracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 84
                self.match(SpecificationGrammarParser.T__0)
                self.state = 85
                self.specNoDC(0)
                self.state = 86
                self.match(SpecificationGrammarParser.T__1)

            elif token in [SpecificationGrammarParser.TRUE]:
                localctx = SpecificationGrammarParser.AspecNoDCBoolFactContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 88
                self.boolFact()

            elif token in [SpecificationGrammarParser.T__6, SpecificationGrammarParser.T__7, SpecificationGrammarParser.INT]:
                localctx = SpecificationGrammarParser.AspecNoDCOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 89
                self.exprNoDC()
                self.state = 90
                self.op()
                self.state = 91
                self.exprNoDC()

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecificationGrammarParser.AspecNoDCBool2OpContext(self, SpecificationGrammarParser.SpecNoDCContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_specNoDC)
                    self.state = 95
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 96
                    self.bool2Op()
                    self.state = 97
                    self.specNoDC(6) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExprNoDCContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.ExprNoDCContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_exprNoDC

     
        def copyFrom(self, ctx):
            super(SpecificationGrammarParser.ExprNoDCContext, self).copyFrom(ctx)



    class AexprNoDCClassScenarioContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCClassScenarioContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(SpecificationGrammarParser.ID)
            else:
                return self.getToken(SpecificationGrammarParser.ID, i)

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprNoDCClassScenario(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCClassContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCClassContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SpecificationGrammarParser.ID, 0)

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprNoDCClass(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCIntContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCIntContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(SpecificationGrammarParser.INT, 0)

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprNoDCInt(self)
            else:
                return visitor.visitChildren(self)


    class AexprNoDCInterfaceContext(ExprNoDCContext):

        def __init__(self, parser, ctx): # actually a SpecificationGrammarParser.ExprNoDCContext)
            super(SpecificationGrammarParser.AexprNoDCInterfaceContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SpecificationGrammarParser.ID, 0)

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitAexprNoDCInterface(self)
            else:
                return visitor.visitChildren(self)



    def exprNoDC(self):

        localctx = SpecificationGrammarParser.ExprNoDCContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exprNoDC)
        try:
            self.state = 116
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = SpecificationGrammarParser.AexprNoDCIntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(SpecificationGrammarParser.INT)
                pass

            elif la_ == 2:
                localctx = SpecificationGrammarParser.AexprNoDCInterfaceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(SpecificationGrammarParser.T__6)
                self.state = 106
                self.match(SpecificationGrammarParser.ID)
                self.state = 107
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 3:
                localctx = SpecificationGrammarParser.AexprNoDCClassScenarioContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(SpecificationGrammarParser.T__7)
                self.state = 109
                self.match(SpecificationGrammarParser.ID)
                self.state = 110
                self.match(SpecificationGrammarParser.T__8)
                self.state = 111
                self.match(SpecificationGrammarParser.ID)
                self.state = 112
                self.match(SpecificationGrammarParser.T__4)
                pass

            elif la_ == 4:
                localctx = SpecificationGrammarParser.AexprNoDCClassContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(SpecificationGrammarParser.T__7)
                self.state = 114
                self.match(SpecificationGrammarParser.ID)
                self.state = 115
                self.match(SpecificationGrammarParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(SpecificationGrammarParser.OpContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LEQ(self):
            return self.getToken(SpecificationGrammarParser.LEQ, 0)

        def EQ(self):
            return self.getToken(SpecificationGrammarParser.EQ, 0)

        def GEQ(self):
            return self.getToken(SpecificationGrammarParser.GEQ, 0)

        def LT(self):
            return self.getToken(SpecificationGrammarParser.LT, 0)

        def GT(self):
            return self.getToken(SpecificationGrammarParser.GT, 0)

        def NEQ(self):
            return self.getToken(SpecificationGrammarParser.NEQ, 0)

        def getRuleIndex(self):
            return SpecificationGrammarParser.RULE_op

        def accept(self, visitor):
            if isinstance( visitor, SpecificationGrammarVisitor ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):
